--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stulesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
     <script src="js/app.js" defer></script>
 </head>
 <body>
@@ -15,12 +15,21 @@
                 <div class="layers__caption">Welcome to Parallax</div>
                 <div class="layers__title">Fairy Forest</div>
             </div>
-            <div class="layer layers__base"></div>
-            <div class="layer layers__title"></div>
-            <div class="layer layers__front"></div>
+            <div class="layer layers__base" style="background-image: url(./img/layer-base.png);"></div>
+            <div class="layer layers__title" style="background-image: url(./img/layer-middle.png);"></div>
+            <div class="layer layers__front" style="background-image: url(./img/layer-front.png);"></div>
         </div>
-
     </header>
+
+    <article class="main-article" style="background-image: url(./img/dungeon.jpg);">
+        <div class="main-article__content">
+            <h2 class="main article__header">TO BE CONTINUEd</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            Dicta saepe cum nihil nulla placeat blanditiis. Iusto maxime vitae accusamus, voluptate sint soluta, 
+            porro voluptas magnam labore nemo asperiores voluptatum sapiente assumenda repudiandae.</p>
+        </div>
+        <div class="copy">© Parallax Design</div>
+    </article>
     
 </body>
 </html>
