add scroll  event and other css styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <article class="main-article" style="background-image: url(./img/dungeon.jpg);">
         <div class="main-article__content">
-            <h2 class="main article__header">TO BE CONTINUEd</h2>
+            <h2 class="main article__header">TO BE CONTINUED</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Dicta saepe cum nihil nulla placeat blanditiis. Iusto maxime vitae accusamus, voluptate sint soluta, 
             porro voluptas magnam labore nemo asperiores voluptatum sapiente assumenda repudiandae.</p>
