add a plugin for smooth scrolling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="css/main.css"/>
+
+    <script src="libs/gsap/gsap.min.js" defer></script>
+    <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
+    <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
+
     <script src="js/app.js" defer></script>
 </head>
 <body>
@@ -23,8 +28,8 @@
 
     <article class="main-article" style="background-image: url(./img/dungeon.jpg);">
         <div class="main-article__content">
-            <h2 class="main article__header">TO BE CONTINUED</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            <h2 class="main-article__header">TO BE CONTINUED</h2>
+            <p class="main-article__paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Dicta saepe cum nihil nulla placeat blanditiis. Iusto maxime vitae accusamus, voluptate sint soluta, 
             porro voluptas magnam labore nemo asperiores voluptatum sapiente assumenda repudiandae.</p>
         </div>
