add finish changes

--- a/index.html
+++ b/index.html
@@ -14,27 +14,33 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
-    <header class="main-header">
-        <div class="layers">
-            <div class="layer__header">
-                <div class="layers__caption">Welcome to Parallax</div>
-                <div class="layers__title">Fairy Forest</div>
-            </div>
-            <div class="layer layers__base" style="background-image: url(./img/layer-base.png);"></div>
-            <div class="layer layers__middle" style="background-image: url(./img/layer-middle.png);"></div>
-            <div class="layer layers__front" style="background-image: url(./img/layer-front.png);"></div>
-        </div>
-    </header>
+    <div class="wrapper">
+        <div class="content">
 
-    <article class="main-article" style="background-image: url(./img/dungeon.jpg);">
-        <div class="main-article__content">
-            <h2 class="main-article__header">TO BE CONTINUED</h2>
-            <p class="main-article__paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Dicta saepe cum nihil nulla placeat blanditiis. Iusto maxime vitae accusamus, voluptate sint soluta, 
-            porro voluptas magnam labore nemo asperiores voluptatum sapiente assumenda repudiandae.</p>
+            <header class="main-header">
+                <div class="layers">
+                    <div class="layer__header">
+                        <div class="layers__caption">Welcome to Parallax</div>
+                        <div class="layers__title">Fairy Forest</div>
+                    </div>
+                    <div class="layer layers__base" style="background-image: url(./img/layer-base.png);"></div>
+                    <div class="layer layers__middle" style="background-image: url(./img/layer-middle.png);"></div>
+                    <div class="layer layers__front" style="background-image: url(./img/layer-front.png);"></div>
+                </div>
+            </header>
+        
+            <article class="main-article" style="background-image: url(./img/dungeon.jpg);">
+                <div class="main-article__content">
+                    <h2 class="main-article__header">TO BE CONTINUED</h2>
+                    <p class="main-article__paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Dicta saepe cum nihil nulla placeat blanditiis. Iusto maxime vitae accusamus, voluptate sint soluta, 
+                    porro voluptas magnam labore nemo asperiores voluptatum sapiente assumenda repudiandae.</p>
+                </div>
+                <div class="copy">© Parallax Design</div>
+            </article>
         </div>
-        <div class="copy">© Parallax Design</div>
-    </article>
+    </div>
+
     
 </body>
 </html>
